# GES-echem-suite

./: .buildinfo  .gitignore  README.md  api.html  build.sh  cellcycling-module.html  contributor-guide.html  examples.html  genindex.html  getting-started.html  intro.html  meta.yaml  objects.inv  py-modindex.html  release-notes.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  user-guide.html
.github/workflows/: docs-deploy.yml
API/: api_cellcycling_cycles.html  api_cellcycling_experiments.html  api_cellcycling_read_input.html  api_cyclicvoltammetry_read_input.html  api_graphicaltools.html
Examples/: plot-cycles.html  plot-cyclicvoltammetry.html  plot-rate-experiments.html
Guide/: cell-cycling.html  cyclic-voltammetry.html  graphicaltools.html
Guide/CellCycling/: accessing-data.html  analyzing-experiments.html  loading-files.html
Tutorials/: computing-properties.html  loading-files.html
_sources/: api.md  examples.md  intro.md  release-notes.md
_sources/API/: api_cellcycling_cycles.md
_sources/Examples/: plot-cyclicvoltammetry.md
_sources/Guide/: graphicaltools.md
docs/: _config.yml  _toc.yml  api.md  api.rst  cellcycling-module.md  contributor-guide.md  examples.md  getting-started.md  intro.md  release-notes.md  requirements-docs.txt  user-guide.md
docs/API/: api_cellcycling_experiments.md  api_cellcycling_read_input.md  api_cyclicvoltammetry_read_input.md  api_graphicaltools.md
docs/Examples/: plot-cycles.md  plot-cyclicvoltammetry.md  (+1 more)
echemsuite/: graphical.py  graphicaltools.py  utils.py
(+103 files in other folders)
